[tool.poetry]
name = "repl_python3_PeruvianCheeseOil"
version = "0.1.0"
description = ""
authors = ["SaurabhSaralaya <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
bs4 = "^0.0.1"
discord = "^1.7.3"
Flask = "^2.0.3"
Markdown = "^3.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
